Fix uneven line heights.

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a {
 }
 .logo span { color: var(--me-red); }
 
-.menu { list-style: none; }
+.menu { list-style: none; line-height: 50px;}
 
 .menu-item {
     font-size: 2.5rem;
